--- a/autopo-app/pom.xml
+++ b/autopo-app/pom.xml
@@ -276,6 +276,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ooo.autopo</groupId>
+            <artifactId>autopo-ai-openrouter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.tinylog</groupId>
             <artifactId>tinylog-impl</artifactId>
             <scope>compile</scope>
