--- a/autopo-app/pom.xml
+++ b/autopo-app/pom.xml
@@ -331,6 +331,10 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-http-client-jdk</artifactId>
+        </dependency>
         <!-- test dependencies -->
         <dependency>
             <groupId>org.testfx</groupId>
